ensure log lines don't overflow off the screen

--- a/bowelism/media/css/base.css
+++ b/bowelism/media/css/base.css
@@ -13,6 +13,7 @@ body {
     position: absolute;
     bottom: 0;
     z-index: -1;
+    width: 100%
 }
 
 .log-line {
